inicializando projeto Margareth Hamilton

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha primeira página web - Margaret Hamilton</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -50,22 +49,22 @@
         <div>
             <div>
                 <a href>#</a>
-                    <img src="/img/facebook.png" alt="Imagem de ícone do Facebook">
+                    <img src="img/facebook.png" alt="Imagem de ícone do Facebook">
                     <h3>Facebook</h3>
                     <p>Margareth Hamilton</p>
 
                 <a href>#</a>
-                    <img src="/img/in.png" alt="Imagem de ícone do LinkedIn">
+                    <img src="img/in.png" alt="Imagem de ícone do LinkedIn">
                     <h3>LinkedIn</h3>
                     <p>Margareth Hamilton</p>
 
                 <a href>#</a>
-                    <img src="/img/twitter.png" alt="Imagem de ícone do Twitter">
+                    <img src="img/twitter.png" alt="Imagem de ícone do Twitter">
                     <h3>Twitter</h3>
                     <p>Margareth Hamilton</p>
 
                 <a href>#</a>
-                    <img src="/img/github.png" alt="Imagem de ícone do Github">
+                    <img src="img/github.png" alt="Imagem de ícone do Github">
                     <h3>Github</h3>
                     <p>Margareth Hamilton</p>
 
