--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- HEADER BANNER -->
     <div class="banner">
         <div class="container">
-            <h1>Oi, eu sou Margaret Hamilton</h1>
-            <a target="_blank" href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computa%C3%A7%C3%A3o)">Conheça a biografia completa no Wikipedia</a>
+            <h1 class="banner__titulo u-margin-bottom-peq">Oi, eu sou Margaret Hamilton</h1>
+            <p class="banner__subtitulo u-margin-bottom-peq">Conheça mais sobre mim</p>
+            <a class="btn btn-branco" target="_blank" href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computa%C3%A7%C3%A3o)">Conheça a biografia completa no Wikipedia</a>
         </div>
     </div>
 
