projeto oficina reprograma

--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
 
     <div>
     <!-- SESSÃO SOBRE -->
-        <div>
-            <h2>Um pouco mais sobre mim</h2>
-
-            <div>
-                <p>Eu sou Margaret Hamilton, sou empresária, engenheira de software e cientista da computação e adoro escrever códigos.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#">Veja meu cv </a>
+        <div class="sobre__div"> 
+            <h2 class="sobre__titulo">Um Pouco Mais Sobre Mim</h2>
+            <div class="sobre__descricao-div">
+                <p class="sobre__descricao-destaque u-margin-bottom-peq">Eu sou Margaret Hamilton, sou empresária, engenheira de software e cientista da computação e adoro escrever códigos.</p>
+                <p class="sobre__descricao-texto u-margin-bottom-peq">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#" class="btn btn-roxo">Veja meu cv </a>
             </div>
 
-            <div>
-                <h3>Minhas Habilidades</h3>
-                <ul>
+            <div class="sobre__habilidades-div">
+                <h3 class="sobre__habilidades-titulo">Minhas Habilidades</h3>
+                <ul class="sobre__habilidades-lista">
                     <li>Teste de sistemas</li>
                     <li>Priority scheduling</li>
                     <li>Desenvolvi o conceito computação paralela</li>
@@ -45,29 +44,34 @@
 
         </div>
 
+
         <!-- REDES SOCIAIS -->
 
-        <div>
-            <div>
-                <a href>#</a>
-                    <img src="img/facebook.png" alt="Imagem de ícone do Facebook">
-                    <h3>Facebook</h3>
+        <div class="footer container">
+            <div class="redes__sociais-div">
+                <a href="#" class="redes__sociais-item">
+                    <img class="redes__sociais-img" src="img/facebook.png" alt="Imagem de ícone do Facebook">
+                    <h3 class="redes__sociais-titulo">Facebook</h3>
                     <p>Margareth Hamilton</p>
+                </a>
 
-                <a href>#</a>
-                    <img src="img/in.png" alt="Imagem de ícone do LinkedIn">
-                    <h3>LinkedIn</h3>
+                <a href="#" class="redes__sociais-item">
+                    <img class="redes__sociais-img" src="img/in.png" alt="Imagem de ícone do LinkedIn">
+                    <h3 class="redes__sociais-titulo">LinkedIn</h3>
                     <p>Margareth Hamilton</p>
+                </a>
 
-                <a href>#</a>
-                    <img src="img/twitter.png" alt="Imagem de ícone do Twitter">
-                    <h3>Twitter</h3>
+                <a href="#" class="redes__sociais-item">
+                    <img class="redes__sociais-img" src="img/twitter.png" alt="Imagem de ícone do Twitter">
+                    <h3 class="redes__sociais-titulo">Twitter</h3>
                     <p>Margareth Hamilton</p>
+                </a>
 
-                <a href>#</a>
-                    <img src="img/github.png" alt="Imagem de ícone do Github">
-                    <h3>Github</h3>
+                <a href="#" class="redes__sociais-item">
+                    <img class="redes__sociais-img" src="img/github.png" alt="Imagem de ícone do Github">
+                    <h3 class="redes__sociais-titulo">Github</h3>
                     <p>Margareth Hamilton</p>
+                </a>
 
             </div>
         </div>
